# palemoon27

./: .gdbinit  .gitignore  AUTHORS  CLOBBER  Makefile.in  README.md  aclocal.m4  client.mk  configure.in  moz.build  old-configure  old-configure.in  xulclip.diff
browser/: Makefile.in  app.mozbuild  configure.in  confvars.sh  moz.build
browser/app/: Makefile.in  blocklist.xml  moz.build  nsBrowserApp.cpp  palemoon.exe.manifest
browser/app/profile/: firefox.js  palemoon.js
browser/base/: jar.mn  moz.build
browser/base/content/: aboutDialog.js  aboutDialog.xul  aboutNetError.xhtml  autorecovery.js  baseMenuOverlay.xul  browser-addons.js  browser-appmenu.inc  browser-context.inc  browser-doctype.inc  browser-fullScreen.js  browser-sets.inc  (+26 more)
browser/components/: BrowserComponents.manifest  distribution.js  moz.build  nsBrowserContentHandler.js  nsBrowserGlue.js
browser/config/: version.txt  version_about.txt  version_display.txt
browser/devtools/: jar.mn  main.js  moz.build
browser/extensions/: Makefile.in
browser/fonts/: moz.build
browser/fuel/: fuelApplication.js
browser/installer/: Makefile.in  package-manifest.in  removed-files.in
browser/locales/: Makefile.in  filter.py  jar.mn  l10n.ini
browser/metro/: metroapp.ini.in
browser/modules/: AboutHome.jsm  ContentClick.jsm  ContentCrashHandlers.jsm  ContentCrashReporters.jsm  ContentLinkHandler.jsm  Makefile.in  PageMenu.jsm  PopupNotifications.jsm  ProcessHangMonitor.jsm  SitePermissions.jsm  Windows8WindowFrameColor.jsm  WindowsPreviewPerTab.jsm  moz.build
browser/themes/: preprocess-tab-svgs.py
(+6183 files in other folders)
